# pvr.xinfan

./: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  install_manifest.txt  make.sh  pvr.xinfan.so.1.10.7
debian/: changelog.in  control  copyright  kodi-pvr-xinfan.install  rules
pvr.xinfan/: PVRXinFanAddonSettings.xml  README.md  addon.xml
src/: PVRXinFanData.cpp  PVRXinFanData.h  client.cpp  client.h
